Fix profile section mobile layout

--- a/style.css
+++ b/style.css
@@ -3688,6 +3688,37 @@ will-change:transform;
         max-width:90vw !important;
     }
 
+    /* PROFIL OPENING MOBILE */
+.couple-cover{
+    width: 280px;
+    height: 420px;
+    margin: 20px auto;
+}
+
+.couple-cover img{
+    width: 85%;
+    height: auto;
+    object-fit: contain;
+}
+
+.couple-title{
+    font-size: 4rem;
+}
+
+.guest-container{
+    margin-top: 20px;
+}
+
+#guestName{
+    font-size: 2.3rem;
+}
+
+/* bunga atas */
+.flower-left,
+.flower-right{
+    width: 120px;
+}
+
 }
 
 @media screen and (max-width:1024px){
